[package]
authors = ["Jonathan Creekmore <jonathan@thecreekmores.org>"]
description = "Parse and encode PEM-encoded data."
documentation = "https://docs.rs/pem/"
homepage = "https://github.com/jcreekmore/pem-rs.git"
license = "MIT"
name = "pem"
readme = "README.md"
repository = "https://github.com/jcreekmore/pem-rs.git"
version = "1.1.1"
categories = [ "cryptography" ]
edition = "2018"
rust-version = "1.34.2"

[dependencies]
base64 = "0.13.0"
serde = { version = "1", optional = true, features = ["serde_derive"] }

[dev-dependencies]
criterion = "0.3.0"
serde_json = "1"

[[bench]]
name = "pem_benchmark"
harness = false

[badges]
travis-ci = { repository = "jcreekmore/pem-rs" }
