[package]
authors = ["Jonathan Creekmore <jonathan@thecreekmores.org>"]
description = "Parse and encode PEM-encoded data."
documentation = "https://docs.rs/pem/"
homepage = "https://github.com/jcreekmore/pem-rs.git"
license = "MIT"
name = "pem"
readme = "README.md"
repository = "https://github.com/jcreekmore/pem-rs.git"
version = "1.1.2-alpha.0"
categories = [ "cryptography" ]
keywords = [
    "no-std",
    "no_std",
    "pem",
]
edition = "2021"
rust-version = "1.67.0"

[features]
default = ["std"]
std = [
    "base64/std",
    # enable serde's std feature iff the serde and std features are both activated
    "serde?/std",
]
serde = ["dep:serde"]

[dependencies.base64]
version = "0.13.0"
default-features = false
features = ["alloc"]

[dependencies.serde]
version = "1"
optional = true
default-features = false
features = ["serde_derive"]

[dev-dependencies]
criterion = "0.3.0"
proptest = "1"
serde_json = "1"

[[bench]]
name = "pem_benchmark"
harness = false

[badges]
travis-ci = { repository = "jcreekmore/pem-rs" }
