[package]
authors = ["Jonathan Creekmore <jonathan@thecreekmores.org>"]
description = "Parse and encode PEM-encoded data."
documentation = "https://docs.rs/pem/"
homepage = "https://github.com/jcreekmore/pem-rs.git"
license = "MIT"
name = "pem"
readme = "README.md"
repository = "https://github.com/jcreekmore/pem-rs.git"
version = "3.0.4"
categories = [ "cryptography" ]
keywords = [
    "no-std",
    "no_std",
    "pem",
]
edition = "2021"
rust-version = "1.60.0"

[features]
default = ["std"]
std = [
    "base64/std",
    # enable serde's std feature iff the serde and std features are both activated
    "serde?/std",
]
serde = ["dep:serde"]

[dependencies.base64]
version = "0.22.0"
default-features = false
features = ["alloc"]

[dependencies.serde]
version = "1"
default-features = false
optional = true

[dev-dependencies]
criterion = "0.3.0"
proptest = { version = "1", default-features = false, features = ["std"] }
serde_json = "1"

[[bench]]
name = "pem_benchmark"
harness = false

[badges]
travis-ci = { repository = "jcreekmore/pem-rs" }
